aks/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: api
  name: tripinsights-poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripinsights-poi
  template:
    metadata:
      labels:
        app: tripinsights-poi
    spec:
      containers:
      - name: tripinsights-poi
        image: registrygxi0879.azurecr.io/tripinsights/poi:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: api
  name: tripinsights-poi-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: tripinsights-poi
