aks/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: api
  name: tripinsights-trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripinsights-trips
  template:
    metadata:
      labels:
        app: tripinsights-trips
    spec:
      containers:
      - name: tripinsights-trips
        image: registrygxi0879.azurecr.io/tripinsights/trips:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: api
  name: tripinsights-trips-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: tripinsights-trips
