aks/user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: api
  name: tripinsights-user-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripinsights-user-java
  template:
    metadata:
      labels:
        app: tripinsights-user-java
    spec:
      containers:
      - name: tripinsights-user-java
        image: registrygxi0879.azurecr.io/tripinsights/user-java:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: api
  name: tripinsights-user-java-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: tripinsights-user-java
