aks/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: web
  name: tripinsights-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: tripinsights-ingress.ee4429d302c142b7bc97.ukwest.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: tripinsights-tripviewer-service
            port: 
              number: 80
